# hyperion-controller

./: .gitignore  index.html  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
public/moves/: blueLeft copy 2.csv  blueLeft copy.csv  blueLeft.csv  spline.csv
src/: App.svelte  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection.rs  construction.rs  controller.rs  lib.rs  main.rs  math.rs  misc.rs
src-tauri/src/commands/: connect.rs  disconnect.rs  message.rs  mod.rs
src/components/FieldCanvas/: Field.svelte  FieldCanvas.svelte
src/components/extra/: Connection.svelte  Menu.svelte  Notifications.svelte  Ping.svelte  Positions.svelte
src/components/layout/: FieldMap.svelte  FileInput.svelte  Menu.svelte  MenuTemp.svelte  NavBar.svelte  WindowBar.svelte
src/components/preview/: BotCanvas.svelte  FieldCanvas.svelte  PathCanvas.svelte  Preview.svelte
src/components/settings/: Measurements.svelte  SeasonSelect.svelte  SettingsInput.svelte  SettingsModal.svelte  SizeInput.svelte
src/lib/: BezierAlgo.ts  Bot.class.ts  TO_BE_DELETED.ts  canvas.ts  index.ts  math.ts
src/lib/class/: Bot.ts  Circle.ts  Line.ts  Point.ts  Square.ts  index.ts
src/lib/enums/: index.ts
src/lib/misc/: index.ts  math.ts
src/lib/types/: index.ts  interface.ts  types.ts
