[package]
name = "hyperion_controller"
version = "0.0.0"
description = "Hyperion Controller"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "dialog-save", "fs-read-dir", "fs-create-dir", "fs-read-file", "fs-write-file", "fs-remove-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15.6"
serde_json = "1.0"
tungstenite = { version = "0.21.0" }
async-trait = "0.1.52"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
log = "0.4.20"
gilrs-core = "0.5.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
